# ds-caselaw-utils

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  courts.md  jsfh-conf.yaml  jsonschema-gentypes.yaml  pyproject.toml  renovate.json  setup.cfg  zizmor.yml
.github/workflows/: codeql.yml  publish.yml  secrets.yml  test.yml
doc/courts/: visualisation.md
doc/schemas/courts/: courts-schema.md
doc/schemas/parser-metadata/: ingester_options-schema.md  metadata-schema.md  parser-schema.md
doc/schemas/parser-metadata/examples/: .gitignore  README.md  check_examples
schemas/courts/: courts-schema.md  courts.schema.json
schemas/parser-metadata/: ingester_options-schema.md  ingester_options.schema.json  metadata-schema.md  metadata.schema.json  parser-schema.md  parser.schema.json
schemas/parser-metadata/examples/: check_examples
scripts/: build_courts_list  build_schema_docs
src/: __init__.py  neutral.py
src/autogen/: courts.csv  courts.json
src/ds_caselaw_utils/: __init__.py  courts.py  courts_schema_types_autogenerated.py  factory.py  generate_regex.py  neutral.py  test_court.py  test_court_data.py  test_courts.py  test_courts_repository.py  test_factory.py  test_neutral.py
src/ds_caselaw_utils/data/: README.md  court_names.yaml  neutral_citation_regex.yaml
src/ds_caselaw_utils/data/markdown/description/: eat.md  ewca.md  ewca_civ.md  ewca_crim.md  ewcc.md  ewcop.md  ewcr.md  ewfc.md  ewhc.md  ewhc_admin.md  ewhc_admlty.md  ewhc_ch.md  ewhc_comm.md  ewhc_fam.md  ewhc_ham.md  ewhc_ipec.md  ewhc_kb.md  ewhc_mercantile.md  ewhc_pat.md  ewhc_scco.md  ewhc_tcc.md  ftt_claims.md  ftt_pc.md  ftt_phl.md  ftt_transport.md  paac.md  poac.md  siac.md  ukftt.md  ukftt_credit.md  ukftt_estate.md  ukftt_grc.md  ukftt_hesc.md  ukftt_tc.md  ukiptrib.md  ukist.md  ukpc.md  uksc.md  ukut_aac.md  ukut_iac.md  (+2 more)
src/ds_caselaw_utils/data/markdown/historic_docs/: ewca_civ.md  ewca_crim.md  ewcc.md  ewcr.md  ewhc.md  ewhc_admin.md  ewhc_admlty.md  ewhc_ch.md  ewhc_comm.md  ewhc_fam.md  ewhc_ipec.md  ewhc_kb.md  ewhc_mercantile.md  ewhc_pat.md  ewhc_scco.md  ewhc_tcc.md  ftt_claims.md  ftt_transport.md  paac.md  poac.md  siac.md  ukftt_estate.md  ukftt_grc.md  ukftt_hesc.md  ukftt_tc.md  ukiptrib.md  ukist.md  ukpc.md  ukut_aac.md  ukut_iac.md  ukut_lc.md  ukut_tcc.md
src/ds_caselaw_utils/data/schema/: courts.schema.json
src/ds_caselaw_utils/schemas/courts/: court.schema.json  courts.schema.json
src/ds_caselaw_utils/schemas/parser-metadata/: ingester_options.schema.json  metadata.schema.json  parser.schema.json
src/ds_caselaw_utils/tests/: factory.py  test_court.py  test_court_data.py  test_courts_repository.py  test_factory.py  test_neutral.py
src/ds_caselaw_utils/types/: __init__.py  courts_schema_autogen.py  metadata_schema_autogen.py  parser_schema_autogen.py
