[tool.poetry]
name = "ds_caselaw_utils"
version = "0.4.5"
description = "Utilities for the National Archives Caselaw project"
authors = ["Nick Jackson <nick@dxw.com>", "David McKee <dragon@dxw.com>", "Tim Cowlishaw <tim@timcowlishaw.co.uk>", "Laura Porter <laura@dxw.com>"]
license = "MIT"
homepage = "https://github.com/nationalarchives/ds-caselaw-utils"
keywords = ["national archives", "caselaw"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
"ruamel.yaml" = "^0.17.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
