[tool.poetry]
name = "ds_caselaw_utils"
version = "2.4.6"
description = "Utilities for the National Archives Caselaw project"
authors = ["Nick Jackson <nick@dxw.com>", "David McKee <dragon@dxw.com>", "Tim Cowlishaw <tim@timcowlishaw.co.uk>", "Laura Porter <laura@dxw.com>"]
license = "MIT"
homepage = "https://github.com/nationalarchives/ds-caselaw-utils"
keywords = ["national archives", "caselaw"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
"ruamel.yaml" = "^0.18.0"
typing-extensions = "^4.12.2"
markdown-it-py = "^3.0.0"
mdit-py-plugins = "^0.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501", "G004", "PLR2004", "RUF005", "RUF012", "UP040"] # longlines, fstrings in logs, magic values, consider not concat, mutable classbits, type instead of TypeAlias
extend-select = ["W", "I", ]
# extend-select = [ "SLF", "SIM", "B", "Q", "C90", "I", "UP", "YTT", "ASYNC", "S", "BLE", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA",
#                  "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLOT", "TID", "TCH", "INT", "PTH",
#                  "FIX", "PGH", "PL", "TRY", "FLY", "PERF", "RUF"]
unfixable = ["ERA"]

[tool.ruff.lint.extend-per-file-ignores]
"test_*" = ["S101"]  # `assert` is fine in tests

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
changelog_incremental = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
